another fix for footer on mobile

--- a/app/styles/components/results/_result_box.scss
+++ b/app/styles/components/results/_result_box.scss
@@ -39,6 +39,7 @@
     margin-left: -100%;
     width: 300%;
     overflow: visible;
+    z-index: 1000;
 
     .icon {
       // cheat to move things left a little to center on mobile
